@@ -1,3 +1,8 @@
+Fri Apr  1 13:12:47 2005  Ciju John  <john_c@ociweb.com>
+
+        * utils/catior/catior.cpp:
+          Turned on code for the SCIOP profile parsing.
+
 Fri Apr  1 10:33:39 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* TAO_IDL/be/be_codegen.cpp (gen_stub_src_includes):
